force-app/main/default/objects/Employee__c/fields/Date_of_Hire__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Hire__c</fullName>
    <description>Date of Hire</description>
    <inlineHelpText
  >Enter the original date of hire for the employee.</inlineHelpText>
    <label>Date of Hire</label>
    <type>Date</type>
</CustomField>