force-app/main/default/objects/Employee__c/fields/Date_of_Termination__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Termination__c</fullName>
    <description>Date of termination for the employee</description>
    <inlineHelpText
  >Enter the date of termination for the employee.</inlineHelpText>
    <label>Date of Termination</label>
    <type>Date</type>
</CustomField>