force-app/main/default/objects/Employee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Company email for the employee</description>
    <inlineHelpText>Enter the company email for the employee</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>