force-app/main/default/objects/Employee__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First name</description>
    <inlineHelpText>Enter the employee&apos;s first name</inlineHelpText>
    <label>First Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>