force-app/main/default/objects/Employee__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Employee last name or surname</description>
    <inlineHelpText>Enter the employee&apos;s last name</inlineHelpText>
    <label>Last Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>