force-app/main/default/objects/Employee__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Company phone number for the employee</description>
    <inlineHelpText
  >Enter the company phone number for the employee</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>