force-app/main/default/objects/Employee__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Salesforce user record for the employee if it exists.</description>
    <inlineHelpText
  >Select the Salesforce User for this employee.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>